# nixie-clock-rust

./: .gitignore  Cargo.toml  diagram.json  nixie-clock-rust.code-workspace  wokwi.toml
.cargo/: config.toml
chip/: Makefile
chip/.devcontainer/: devcontainer.json
clock/: Cargo.toml  diagram.json  partitions.csv  wokwi.toml
clock/.cargo/: config.toml
clock/src/: lib.rs  main.rs  rgb_led.rs  server.rs  storage.rs  wifi.rs
drivers/: Cargo.toml
drivers/src/: config.rs  debouncer.rs  lib.rs  nixie_display.rs  rgb_led.rs  shift_register.rs  storage.rs
src/: main.rs
testing/: Cargo.toml
testing/src/: digital.rs
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.svelte
webapp/src/lib/: Form.svelte
