[package]
name = "nixie-clock-rust"
version = "0.1.0"
authors = ["Kurtis Seebaldt <kseebaldt@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "nixie-clock-rust"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[lib]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
embedded-hal = "1.0.0"
esp-idf-svc = { version = "0.49.1", default-features = false }
esp-idf-hal = { version = "0.44.1", default-features = false }
embedded-svc            = "0.28.0"
anyhow = "1.0.93"
chrono = "0.4.38"
chrono-tz = { version = "0.10", features = [ "filter-by-regex" ] }
serde = { version = "1.0", features = ["derive"] }
postcard = "1.0"
serde_json = "1.0"
drivers        = { path = "../drivers" }

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "=0.2.0"
