[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
shift-register-driver = "0.1.1"
chrono = "0.4.38"
postcard = "1.0"
thiserror = "1.0.63"
toml-cfg = "=0.2.0"
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
testing        = { path = "../testing" }