[package]
name = "drivers"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
shift-register-driver = "0.1.1"
chrono = "0.4.39"
postcard = "1.1"
thiserror = "2.0"
toml-cfg = "=0.2.0"
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
testing        = { path = "../testing" }